--- a/contacte.html
+++ b/contacte.html
@@ -13,7 +13,7 @@
         <ul class="nav-links">
             <li><a href="index.html">Acasă</a></li>
             <li><a href="produse.html">Produse</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contacte.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -23,13 +23,13 @@
             <p>Ai întrebări despre echipamente sau locații de pescuit? Scrie-ne!</p>
             
             <div class="info-item">
-                <strong>📍 Adresă:</strong> Str. Pescarilor, Nr. 10, Tulcea
+                <strong>Adresă:</strong> Str. Pescarilor, Nr. 10, Tulcea
             </div>
             <div class="info-item">
-                <strong>📞 Telefon:</strong> 0722 000 000
+                <strong>Telefon:</strong> 0722 000 000
             </div>
             <div class="info-item">
-                <strong>📧 Email:</strong> contact@deltashop.ro
+                <strong>Email:</strong> contact@deltashop.ro
             </div>
         </div>
 
