--- a/produse.html
+++ b/produse.html
@@ -18,7 +18,7 @@
     </nav>
 
     <section class="products-header">
-        <h1>Catalog Produse</h1>
+        <h1>Produse Recomandate</h1>
         <p>Alege echipamentul potrivit pentru următoarea ta aventură.</p>
     </section>
 
@@ -27,34 +27,34 @@
             
             <div class="product-card">
                 <div class="badge">Nou</div>
-                <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?q=80&w=300" alt="Lansetă">
+                <img src="#" alt="Lansetă">
                 <h3>Lansetă Carbon Pro</h3>
                 <p>Acțiune rapidă, 2.40m, ideală pentru șalău.</p>
-                <div class="price">320 RON</div>
+                <div class="price">320 lei</div>
                 <button class="btn-buy">Adaugă în coș</button>
             </div>
 
             <div class="product-card">
-                <img src="https://images.unsplash.com/photo-1615214371454-948866164f7b?q=80&w=300" alt="Mulinetă">
+                <img src="#" alt="Mulinetă">
                 <h3>Mulinetă Shimano X</h3>
                 <p>9+1 rulmenți, recuperare rapidă a firului.</p>
-                <div class="price">450 RON</div>
+                <div class="price">450 lei</div>
                 <button class="btn-buy">Adaugă în coș</button>
             </div>
 
             <div class="product-card">
-                <img src="https://images.unsplash.com/photo-1590480394626-820d5c2258d2?q=80&w=300" alt="Momeală">
+                <img src="#" alt="Momeală">
                 <h3>Set Voblere Răpitor</h3>
                 <p>Pachet de 5 bucăți în culori atractive.</p>
-                <div class="price">85 RON</div>
+                <div class="price">85 lei</div>
                 <button class="btn-buy">Adaugă în coș</button>
             </div>
 
             <div class="product-card">
-                <img src="https://images.unsplash.com/photo-1541667558913-221c0bc2391b?q=80&w=300" alt="Fir">
+                <img src="#" alt="Fir">
                 <h3>Fir Textil Spider</h3>
                 <p>Rezistență mare la nod, 150m, 0.16mm.</p>
-                <div class="price">110 RON</div>
+                <div class="price">110 lei</div>
                 <button class="btn-buy">Adaugă în coș</button>
             </div>
 
