--- a/contacte.html
+++ b/contacte.html
@@ -29,7 +29,7 @@
                 <strong>Telefon:</strong> 0722 000 000
             </div>
             <div class="info-item">
-                <strong>Email:</strong> contact@deltashop.ro
+                <strong>Email:</strong> contact@deltashop.md
             </div>
         </div>
 
