--- a/produse.html
+++ b/produse.html
@@ -13,7 +13,7 @@
         <ul class="nav-links">
             <li><a href="index.html">Acasă</a></li>
             <li><a href="produse.html">Produse</a></li>
-            <li><a href="contacte.html">Contact</a></li>
+            <li><a href="contacte.html">Contacte</a></li>
         </ul>
     </nav>
 
