--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
             </div>
         </div>
     </section>
+     <footer>
+        <p>&copy; 2026 Delta Shop. Fir întins!</p>
+    </footer>
 </body>
 </html>
