--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>CarpShop</title>
-    <link rel="stylesheet" href="styl.css">
+    <link rel="stylesheet" href="#">
 </head>
 <body>
     <nav class="navbar">
