--- a/produse.html
+++ b/produse.html
@@ -17,6 +17,11 @@
         </ul>
     </nav>
 
+    <section class="linkuri">
+        <li><a href="undite.html">Undite</a></li>
+        <li><a href="mulinete.html">Mulinete</a></li>
+    </section>
+
     <section class="products-header">
         <h1>Produse Recomandate</h1>
         <p>Alege echipamentul potrivit pentru următoarea ta aventură.</p>
