--- a/contacte.html
+++ b/contacte.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="#">
 </head>
 <body>
-
+    <header>
     <nav class="navbar">
         <div class="logo">Carp<span>Shop</span></div>
         <ul class="nav-links">
@@ -16,6 +16,7 @@
             <li><a href="contacte.html">Contact</a></li>
         </ul>
     </nav>
+    </header>
 
     <main class="contact-container">
         <div class="contact-info">
