--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="#">
 </head>
 <body>
+    <header>
     <nav class="navbar">
         <div class="logo">
             <a href="index.html" style="text-decoration: none; color: inherit;">Carp<span>Shop</span></a>
@@ -15,6 +16,7 @@
             <li><a href="contacte.html">Contacte</a></li>
         </ul>
     </nav>
+    </header>
 
     <section class="hero">
         <div class="hero-content">
