--- a/mulinete.html
+++ b/mulinete.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="#">
 </head>
 <body>
-    <nav class="navbar">
+    <header>
+        <nav class="navbar">
         <div class="logo">
             <a href="index.html" style="text-decoration: none; color: inherit;">Carp<span>Shop</span></a>
         </div>
@@ -15,7 +16,8 @@
             <li><a href="produse.html">Produse</a></li>
             <li><a href="contacte.html">Contacte</a></li>
         </ul>
-    </nav>
+        </nav>
+    </header>
 
     <section class="featured-products">
         <h2 class="section-title">Mulinete de Top</h2>
