--- a/produse.html
+++ b/produse.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="#">
 </head>
 <body>
-
+    <header>
     <nav class="navbar">
         <div class="logo">Carp<span>Shop</span></div>
         <ul class="nav-links">
@@ -16,6 +16,7 @@
             <li><a href="contacte.html">Contacte</a></li>
         </ul>
     </nav>
+    </header>
 
     <section class="linkuri">
         <li><a href="undite.html">Undite</a></li>
