--- a/undite.html
+++ b/undite.html
@@ -6,16 +6,18 @@
     <link rel="stylesheet" href="#">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <a href="index.html" style="text-decoration: none; color: inherit;">Carp<span>Shop</span></a>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Acasă</a></li>
-            <li><a href="produse.html">Produse</a></li>
-            <li><a href="contacte.html">Contacte</a></li>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="index.html" style="text-decoration: none; color: inherit;">Carp<span>Shop</span></a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html">Acasă</a></li>
+                <li><a href="produse.html">Produse</a></li>
+                <li><a href="contacte.html">Contacte</a></li>
         </ul>
     </nav>
+    </header>
 
     <section class="featured-products">
         <h2 class="section-title">Undițe și Lansete</h2>
